<resources>
    <string name="app_name">MyContactList</string>
    <string name="imageButtonList">Button to display a list of contacts</string>
    <string name="imageButtonMap">Button to display a map</string>
    <string name="imageButtonSettings">Button to open settings</string>
    <string name="toggleButtonEdit">Off</string>
    <string name="buttonSave">Save</string>
    <string name="editName">Enter Name</string>
    <string name="textContact">Contact:</string>
    <string name="textAddress">Address:</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="textCellPhone">Cell Phone:</string>
    <string name="textHomePhone">Home Phone:</string>
    <string name="birthday_cancel">Cancel</string>
    <string name="birthday_save">Save</string>
    <string name="email_address_text">E-mail Address:</string>
    <string name="text_birthday">Birthday:</string>
    <string name="default_birthday">01/01/1970</string>
    <string name="text_change">Change</string>
    <string name="state_hint">State</string>
    <string name="city_hint">City</string>
</resources>